tests/paczka1/fuzzy1/22484968.err
Error in line 1: S249 S249 9,3
Error in line 5: q88 S17 1s,5
Error in line 4: S249 A212 64,2
Error in line 2: q88 S17 5,5
Error in line 16: S249 S966 34,6
Error in line 3: bLpKrF6 S966 83,5
Error in line 26: bLpKrF6 S966 83,07
Error in line 33: mIk A212 62,7
Error in line 35: mIk S17 48,0
